# accelerate-matrices

./: LICENSE  README.md  accelerate-matrices.cabal
Accelerate/: Math.hs  Types.hs
Accelerate/Internal/: Random.hs
Accelerate/Math/: SMVM.hs
Accelerate/Math/SMVM/: Matrix.hs  MatrixMarket.hs
Data/Array/Accelerate/: Math.hs  Types.hs
Data/Array/Accelerate/Internal/: Random.hs
Data/Array/Accelerate/Math/: SMVM.hs
Data/Array/Accelerate/Math/SMVM/: Matrix.hs  MatrixMarket.hs
