Name:                accelerate-matrices
Version:             0.1
Cabal-version:       >=1.2
Tested-with:         GHC >= 7.4.1

Synopsis:            Matrices manipulation library for accelerate.
-- Description:         
Homepage:            https://github.com/arj/accelerate-matrices
License:             BSD3
License-file:        LICENSE
Author:              The Accelerate Team
Maintainer:          Robert Jakob<jakobro@informatik.uni-freiburg.de>
Category:            Math, Concurrency
Build-type:          Simple
Stability:           Experimental
Extra-source-files:  INSTALL

Library
  Exposed-modules:   Accelerate.Math
                     Accelerate.Math.SMVM
                     Accelerate.Math.SMVM.Matrix
                     Accelerate.Math.SMVM.MatrixMarket
                     Accelerate.Types

  other-modules:     Accelerate.Internal.Random
  
  Build-depends:     accelerate        == 0.9.*,
                     array             >= 0.3,
                     attoparsec        >= 0.10,
                     base              == 4.*,
                     bytestring        >= 0.9,
                     bytestring-lexing >= 0.2,
                     mwc-random        >= 0.8,
                     vector            >= 0.7,
                     vector-algorithms >= 0.4
                     
 
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         

source-repository head
  type:              git
  location:          https://github.com/arj/accelerate-matrices
